--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -1,11 +1,12 @@
 .side-bar
   .side-bar__user-name
     .side-bar__user-name__box
-      .side-bar__user-name__box__name masa
+      .side-bar__user-name__box__name
+        = current_user.name
       .side-bar__user-name__box__icon
         = link_to "#", class: "contents__btn btn-edit" do
           = icon("fa","edit")
-        = link_to "#", class: "contents__btn" do
+        = link_to edit_user_path(current_user), class: "contents__btn" do
           = icon('fa fa-cog', class: "contents__btn--icon")
   .side-bar__group-list
     .side-bar__group-list__name
