--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -44,16 +44,18 @@ display: flex;
     &__group-list {
       background-color: #2f3e51;
       height: calc(100% - 100px);
-      color: $white;
+      // color: $white;
       font-weight: bold;
       padding: 20px 20px 0;
       &__name {
         font-size: 15px;
         margin: 0 0 5px;
+        color: $white;
       }
       &__message {
         font-size: 11px;
         padding-bottom: 40px;
+        color: $white;
       }
     }
   }
