--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -4,12 +4,14 @@
       .side-bar__user-name__box__name
         = current_user.name
       .side-bar__user-name__box__icon
-        = link_to "#", class: "contents__btn btn-edit" do
+        = link_to new_group_path, class: "contents__btn btn-edit" do
           = icon("fa","edit")
         = link_to edit_user_path(current_user), class: "contents__btn" do
           = icon('fa fa-cog', class: "contents__btn--icon")
   .side-bar__group-list
-    .side-bar__group-list__name
-      techcamp
-    .side-bar__group-list__message
-      まだメッセージがありません
+    - current_user.groups.each do |group|
+      = link_to '#' do
+        .side-bar__group-list__name
+          = group.name
+        .side-bar__group-list__message
+          メッセージはまだありません。
