--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -94,6 +94,7 @@ display: flex;
         .btn {
           text-decoration: none;
           display: block;
+          color: $light_blue;
         }
       }
     }
@@ -101,6 +102,7 @@ display: flex;
       background-color: #fafafa;
       height: calc(100vh - 190px);
       padding: 35px 40px 46px;
+      overflow: scroll;
       &__box {
         padding-bottom: 40px;
         &__data {
@@ -127,39 +129,35 @@ display: flex;
       background-color: #d2d2d2;
       height: 90px;
       padding: 20px 40px;
-      display: flex;
       &__box {
         width: 100%;
         position: relative;
-        &__input {
-          display: flex;
+        display: flex;
+        &__text {
+          height: 50px;
           width: 100%;
-          &__text {
-            height: 50px;
-            width: 100%;
-            padding: 0 40px 0 10px;
-            border-style: none;
-          }
-          &__image {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            font-size: 1.3rem;
-            cursor: pointer;
-            &__file {
-              display: none;
-            }
+          padding: 0 40px 0 10px;
+          border-style: none;
+        }
+        &__image {
+          position: absolute;
+          top: 10px;
+          right: 10px;
+          font-size: 1.3rem;
+          cursor: pointer;
+          &__file {
+            display: none;
           }
         }
-      }
-      &__submit {
-        margin: 0 0 0 15px;
-        padding: 0 30px;
-        width: 100px;
-        height: 50px;
-        background-color: $light_blue;
-        color: white;
-        cursor: pointer;
+        &__submit {
+          margin: 0 0 0 15px;
+          padding: 0 30px;
+          width: 100px;
+          height: 50px;
+          background-color: $light_blue;
+          color: white;
+          cursor: pointer;
+        }
       }
     }
   }
