--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -2,26 +2,21 @@
   .main-chat__group-info
     .main-chat__group-info__left-box
       .main-chat__group-info__left-box__current-group
-        test
+        = @group.name
       .main-chat__group-info__left-box__member-list
         Member:
-        masa
+        - @group.users.each do |user|
+          = user.name
+
     .main-chat__group-info__edit-btn
-      = link_to 'Edit', '#', class: 'btn'
+      = link_to 'Edit', 'edit', class: 'btn'
   .main-chat__message-list
-    .main-chat__message-list__box
-      .main-chat__message-list__box__data
-        .main-chat__message-list__box__data__talker
-          masa
-        .main-chat__message-list__box__data__date
-          2020/5/28(Thu) 12:34:56
-      .main-chat__message-list__box__text
-        メッセージ
+    = render @messages
   .main-chat__form
-    %form.main-chat__form__box
-      .main-chat__form__box__input
-        %input.main-chat__form__box__input__text{type: "text", placeholder: "type a message"}
-        %label.main-chat__form__box__input__image
+    = form_for [@group, @message], html: {class:"main-chat__form__box"} do |f|
+      .main-chat__form__box
+        = f.text_field :content, class: 'main-chat__form__box__text', placeholder: 'type a message'
+        = f.label :image, class: 'main-chat__form__box__image' do
           = icon('fas', 'image')
-          %input.main-chat__form__box__input__image__file{type: "file"}
-    %input.main-chat__form__submit{type: 'submit', value: 'Send'}
+          = f.file_field :image, class: 'main-chat__form__box__image__file'
+      = f.submit 'Send', class: 'main-chat__form__box__submit'
