--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -10,8 +10,8 @@
           = icon('fa fa-cog', class: "contents__btn--icon")
   .side-bar__group-list
     - current_user.groups.each do |group|
-      = link_to '#' do
+      = link_to group_messages_path(group) do
         .side-bar__group-list__name
           = group.name
         .side-bar__group-list__message
-          メッセージはまだありません。
+          = group.show_last_message
