自動更新機能の実装

--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,4 +1,4 @@
-.main-chat__message-list__box
+.main-chat__message-list__box{data: {message: {id: message.id}}}
   .main-chat__message-list__box__data
     .main-chat__message-list__box__data__talker
       = message.user.name
