--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -47,6 +47,9 @@ display: flex;
       // color: $white;
       font-weight: bold;
       padding: 20px 20px 0;
+      a {
+        text-decoration: none;
+      }
       &__name {
         font-size: 15px;
         margin: 0 0 5px;
